--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
-{
-  "name": "WAWebsite",
+
+{ "homepage": "https://williamalvarez92.github.io/website/",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
