--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
-
-{"name": "website",
+{
+  "homepage": "https://williamalvarez92.github.io/website/",
+  "name": "website",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -7,6 +8,7 @@
     "bootstrap": "^5.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
@@ -15,6 +17,8 @@
     "sass": "^1.32.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -24,7 +28,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
