--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://williamalvarez92.github.io/williamwebsite/",
-  "name": "williamwebsite",
+  "name": "website",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
