--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://williamalvarez92.github.io/website/",
+  "homepage": "https://williamalvarez92.github.io/website",
   "name": "website",
   "version": "0.1.0",
   "private": false,
