--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@formspree/react": "^2.2.4",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -45,5 +46,8 @@
   "main": "index.js",
   "repository": "git@github.com:williamalvarez92/website.git",
   "author": "William <guillermoalvarez92@hotmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@iconify/react": "^3.1.0"
+  }
 }
